# tap-thinkific

./: .gitignore  README.md  config.json  meltano.yml  pyproject.toml  setup.py  state.json  tap-thinkific.sh  tox.ini
tap_thinkific/: auth.py  client.py  streams.py  tap.py
tap_thinkific/schemas/: courses.json  enrollments.json  groups.json  products.json  users.json  users_groups.json
tap_thinkific/tests/: __init__.py  test_core.py
